Adding 100-lev AK analysis

--- a/aks.ipynb
+++ b/aks.ipynb
@@ -58,13 +58,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'xr' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_nucaps \u001b[39m=\u001b[39m xr\u001b[39m.\u001b[39mopen_dataset(\u001b[39m'\u001b[39m\u001b[39mNUCAPS-EDR_v2r0_npp_s20190430185959_e20190430190557_c20190430190557.nc\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m pressure \u001b[39m=\u001b[39m df_nucaps\u001b[39m.\u001b[39mPressure[\u001b[39m0\u001b[39m,:]\u001b[39m.\u001b[39mvalues\n\u001b[1;32m      3\u001b[0m effective_pressure \u001b[39m=\u001b[39m df_nucaps\u001b[39m.\u001b[39mEffective_Pressure[\u001b[39m0\u001b[39m,:]\u001b[39m.\u001b[39mvalues\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'xr' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "df_nucaps = xr.open_dataset(test_file)\n",
+    "df_nucaps = xr.open_dataset('NUCAPS-EDR_v2r0_npp_s20190430185959_e20190430190557_c20190430190557.nc')\n",
     "pressure = df_nucaps.Pressure[0,:].values\n",
-    "effective_pressure = df_nucaps.Effective_Pressure[0,:].values"
+    "effective_pressure = df_nucaps.Effective_Pressure[0,:].values\n",
+    "\n",
+    "d = {'pressure': pressure, 'effective_pressure': effective_pressure}\n",
+    "df = pd.DataFrame(data=d)\n",
+    "df.to_csv('nucaps-pressure-grid.csv', index=False)"
    ]
   },
   {
